2017-02-19  Jim Fowler  <jrf@biblion>

	* Tools/bookentry/symbols.txt: Added T with line under and A with
	macron.

2017-01-23  Jim Fowler  <jrf@biblion>

	* Tools/bookentry/mainWindow.py (BookEntry.DisplayToEntry): Added more
	error checking.

2017-01-22  Jim Fowler  <jrf@biblion>

	* Tools/bookentry/mainWindow.py (BookEntry.DisplayToEntry): Began
	adding additional error checking after I lost an hours worth of
	work today.

2017-01-01  Jim Fowler  <jrf@biblion>

	* Tools/bookentry/xml/price: created price document. Will
	add to documentation later.

	* Tools/doc/ajbbooks/conf.py: Changed version number in
	the documentation from 1.9 to 2.0.  Should have done this
	yesterday.

2016-12-31  Jim Fowler  <jrf@biblion>

	* Tools/doc/ajbbooks/theory.rst: Updated documentation for
	ajbbooks v2.0.  Committed and tagged v2.0.

	* Data/Ajb/ajb40_books.xml: finished AJB 40 today.

2016-12-24  Jim Fowler  <jrf@biblion>

	* Tools/bookentry/symbols.txt: Reorder entries to table has
	smaller width.

2016-12-11  Jim Fowler  <jrf@biblion>

	* Tools/journals: Changed signal connect to use new style signals
	which is the only mechanism supported in PyQt5.

	* Tools/journalWin.py: Changed signal connect to use new style signals
	which is the only mechanism supported in PyQt5.

	* Tools/journalMenus.py: Changed signal connect to use new style signals
	which is the only mechanism supported in PyQt5.

	* Tools/bookentry/symbol.py (MyButton): Changed signal mechanism
	to new PyQt5 signals.

	* Tools/bookentry/mainWindow.py: Changed signal connect to use new
	style signals which is the only mechanism supported in PyQt5.
	Also changed some dialog boxes for new calling sequence.

	* Tools/bookentry/menus.py: Changed signal connect to use new
	style signals which is the only mechanism supported in PyQt5.

	* Tools/ajbbooks: Changed signal connect to use new style signals
	which is the only mechanism supported in PyQt5.

2016-08-07  Jim Fowler  <jrf@biblion>
